<resources>
    <string name="app_name">World Radio</string>
    <string name="previous_radio">Previous Radio</string>
    <string name="next_radio">Next Radio</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="title_activity_random_radio">RandomRadioActivity</string>
    <string name="random_radios">Random Radios</string>
    <string name="next_random_radio">Next Random Radio</string>
    <string name="back">Back</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="title_activity_explore_countries">ExploreCountriesActivity</string>
    <string name="title_activity_explore_cities">ExploreCitiesActivity</string>
    <string name="title_activity_explore_radios">ExploreRadiosActivity</string>
    <string name="explore">Explore</string>
    <string name="filter">Filter</string>
</resources>