<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPreviousRadioButtonClicked"
            android:text="@string/previous_radio" />

        <Button
            android:id="@+id/nextRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onNextRadioButtonClicked"
            android:text="@string/next_random_radio" />
    </LinearLayout>

    <TextView
        android:id="@+id/radioNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_above="@id/back_button"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onBackButtonClicked"
            android:text="@string/back" />

        <Button
            android:id="@+id/favorites"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onAddToFavoritesClicked"
            android:text="@string/add_to_favorites" />
    </RelativeLayout>
</LinearLayout>