<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_filter_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_above="@id/back_button">

        <EditText
            android:id="@+id/filterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:autofillHints="country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stringList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_above="@id/back_button"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onBackButtonClicked"
            android:text="@string/back" />

        <Button
            android:id="@+id/favorites"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onAddToFavoritesClicked"
            android:text="@string/add_to_favorites" />
    </RelativeLayout>
</RelativeLayout>
